feat(slots): transition to template-based slot architecture
- Updated the slot management system to use templates instead of specific date/time instances, allowing for greater flexibility in scheduling.
- Introduced new `CreateSlotCommand` and `BookSlotCommand` to accommodate the new architecture, including support for available days and slot duration.
- Enhanced `BookingResult` and `Booking` models to include booking date and time, reflecting the new structure.
- Modified repositories and services to handle the new slot template logic, including methods for finding booked times and managing slot availability.
- Updated REST controllers and DTOs to align with the new slot template design, ensuring backward compatibility with legacy booking methods.
- Added integration tests to validate the new functionality and ensure proper error handling.

This commit significantly improves the booking system's flexibility and scalability, aligning with modern scheduling practices.